rgbds-0.6.1/test/asm/reference-undefined-equs.asm
SECTION "sec", ROM0[0]
	db s1, s2

def s1 equs "1"
redef s2 equs "2"
